<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name">CliniqueOnline</string>
    <string name="no_media_warning">Storage Media not present</string>
    <string name="no_media_hint">Sharing the storage media with a PC can make it inaccessible</string>
    <string name="open_failed">Unable to open document</string>
    <string name="search_backwards">Search backwards</string>
    <string name="search_forwards">Search forwards</string>
    <string name="search_document">Search document</string>
    <string name="picker_title">Pdf Writer &amp; Reader</string>
    <string name="outline_title">Table of Contents</string>
    <string name="enter_password">Enter Password</string>
    <string name="searching_">Searching...</string>
    <string name="link_control">Link highlighting and enabling</string>
    <string name="gen_pdf">Generate pdf</string>
    <string name="view_pdf">View pdf</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="progress_title">Generateing pdf...</string>
    <string name="base_url">http://clinique-dev.photoninfotech.com/trunk/admin/clinique_webservice/services.php</string>
    <string name="downloading_complete">Downloading Completed</string>
    <string name="loading">Loading</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="notes_help_txt">*All notes will be saved under Favorites</string>
    <string name="enter_pg_no">Enter Page No</string>
    <string name="chk_internet_conec">Please check your internet connection. </string>
    <string name="text_not_found">Search Keyword Not Found.</string>
    <string name="no_further_occurences_found">No further occurences found</string>
    <string name="no_bookmark_avail">No Bookmarks Available</string>
    <string name="pg_no">page no</string>
    <string name="alert_pg_no">Enter Page</string>
    <string name="no_sdcard">No SD card Found to download the file.</string>
    <string name="title_activity_service">Service</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="pdfMSG">We recommend to install \"Office Suite\" or \"Adobe reader\" for opening file.</string>
    <string name="csvMSG">We recommend to install \"Office Suite\" or \"WPS Office\" for opening file.</string>
</resources>
