<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical" >

	<LinearLayout
		style="@style/alert_window_width"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal|center_vertical"
		android:background="@drawable/rounded_rectangle"
		android:orientation="vertical" >

		<CustomView.CliniqueTextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:imeOptions="actionDone"
			android:paddingLeft="15sp"
			android:paddingRight="15sp"
			android:paddingTop="15sp"
			android:text="@string/enter_pg_no"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="@color/black"
			android:textStyle="bold" />

		<FrameLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="15sp" >

			<CustomView.CliniqueEditText
				android:id="@+id/txtNotes"
				style="@style/alert_txt_size"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:background="@color/white"
				android:gravity="top|left"
				android:hint="@string/pg_no"
				android:inputType="number"
				android:padding="10sp"
				android:singleLine="true" />

			<TextView
				android:id="@+id/lblPgExceed"
				style="@style/alert_txt_size"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:layout_gravity="center"
				android:background="@color/white"
				android:gravity="center_vertical|left"
				android:padding="9sp"
				android:textColor="@color/red" />
		</FrameLayout>

		<View
			android:layout_width="fill_parent"
			android:layout_height="1dp"
			android:background="@color/gray" />

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_marginBottom="1sp"
			android:layout_marginLeft="1sp"
			android:layout_marginRight="1sp"
			android:orientation="horizontal" >

			<Button
				android:id="@+id/btnCancel"
				style="@style/alert_btn_txt_size"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:background="@null"
				android:padding="10sp"
				android:text="@string/cancel"
				android:textColor="@color/blue_btn" />

			<View
				android:layout_width="1dp"
				android:layout_height="fill_parent"
				android:background="@color/gray" />

			<Button
				android:id="@+id/btnDone"
				style="@style/alert_btn_txt_size"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:background="@null"
				android:padding="10sp"
				android:text="@string/ok"
				android:textColor="@color/blue_btn"
				android:textStyle="bold" />
		</LinearLayout>
	</LinearLayout>

</LinearLayout>