<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical" >

	<LinearLayout
		style="@style/alert_window_width"
		android:layout_gravity="center_horizontal|center_vertical"
		android:background="@drawable/rounded_rectangle_single"
		android:orientation="vertical" >

		<CustomView.CliniqueEditText
			android:id="@+id/txtNotes"
			style="@style/alert_txt_size"
			android:layout_width="fill_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			android:background="@drawable/rounded_rectangle_top_white"
			android:gravity="top|left"
			android:imeOptions="actionDone"
			android:inputType="textMultiLine|text|textNoSuggestions"
			android:textColor="@color/black"
			android:padding="10sp"
			android:scrollbars="vertical" />

		<TextView
			android:id="@+id/lblNoteHelpTxt"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="#d9dede"
			android:gravity="center"
			android:padding="10sp"
			android:text="@string/notes_help_txt"
			android:textColor="@color/grey_txt"
			android:textSize="12sp" />

		<View
			android:layout_width="fill_parent"
			android:layout_height="1dp"
			android:background="@color/gray" />

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="1sp"
			android:layout_marginLeft="1sp"
			android:layout_marginRight="1sp"
			android:background="#d9dede"
			android:orientation="horizontal" >

			<Button
				android:id="@+id/btnDone"
				style="@style/alert_btn_txt_size"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:background="@null"
				android:padding="10sp"
				android:text="@string/save"
				android:textColor="@color/blue_btn"
				android:textStyle="bold" />

			<View
				android:layout_width="1dp"
				android:layout_height="fill_parent"
				android:background="@color/gray" />

			<Button
				android:id="@+id/btnCancel"
				style="@style/alert_btn_txt_size"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:background="@null"
				android:padding="10sp"
				android:text="@string/cancel"
				android:textColor="@color/blue_btn" />
		</LinearLayout>
	</LinearLayout>

</LinearLayout>