<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >

	<ViewSwitcher
		android:id="@+id/switcher"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true" >

		<RelativeLayout
			android:id="@+id/topBar"
			android:layout_width="match_parent"
			android:layout_height="40sp"
			android:background="@drawable/top_bar"
			android:padding="5sp" >

			<Button
				android:id="@+id/btnDone"
				style="?android:attr/buttonStyleSmall"
				android:layout_width="45sp"
				android:layout_height="wrap_content"
				android:background="@drawable/done" />

			<Button
				android:id="@+id/btnThumbnail"
				style="?android:attr/buttonStyleSmall"
				android:layout_width="35sp"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5sp"
				android:layout_toRightOf="@+id/btnDone"
				android:background="@drawable/thumbnail_bg" />

			<Button
				android:id="@+id/searchButton"
				android:layout_width="35sp"
				android:layout_height="match_parent"
				android:layout_centerVertical="true"
				android:layout_toLeftOf="@+id/btnNotes"
				android:background="@drawable/search_bg"
				android:contentDescription="@string/search_document" />

			<Button
				android:id="@+id/btnNotes"
				style="?android:attr/buttonStyleSmall"
				android:layout_width="35sp"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5sp"
				android:layout_marginRight="5sp"
				android:layout_toLeftOf="@+id/btnBookmark"
				android:background="@drawable/comment_bg" />

			<CustomView.CliniqueCheckBox
				android:id="@+id/btnBookmark"
				style="?android:attr/buttonStyleSmall"
				android:layout_width="35sp"
				android:layout_height="wrap_content"
				android:layout_toLeftOf="@+id/btnDownload"
				android:background="@drawable/bookmark_bg"
				android:button="@null" />

			<Button
				android:id="@+id/btnDownload"
				style="?android:attr/buttonStyleSmall"
				android:layout_width="35sp"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:layout_marginLeft="5sp"
				android:background="@drawable/download" />

			<!--
                <ImageButton
                android:id="@+id/outlineButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/searchButton"
                android:contentDescription="@string/search_document"
                android:src="@drawable/ic_list" />

            <ImageButton
                android:id="@+id/linkButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/outlineButton"
                android:contentDescription="@string/link_control"
                android:src="@drawable/ic_link" />

            <TextView
                android:id="@+id/docNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/outlineButton"
                android:paddingLeft="15dp"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium" />
			-->

		</RelativeLayout>

		<RelativeLayout
			android:id="@+id/topBar2"
			android:layout_width="match_parent"
			android:layout_height="40sp"
			android:background="@drawable/top_bar"
			android:padding="5sp" >

			<Button
				android:id="@+id/cancel"
				android:layout_width="30sp"
				android:layout_height="30sp"
				android:layout_alignParentLeft="true"
				android:layout_centerVertical="true"
				android:background="@drawable/close"
				android:contentDescription="@string/cancel" />

			<LinearLayout
				style="@style/srch_txt_size"
				android:layout_width="wrap_content"
				android:layout_height="fill_parent"
				android:layout_centerHorizontal="true"
				android:layout_centerVertical="true"
				android:layout_marginLeft="5sp"
				android:layout_marginRight="5sp"
				android:layout_toLeftOf="@+id/searchBack"
				android:layout_toRightOf="@+id/cancel"
				android:background="@drawable/rounded_rectangle_txt"
				android:orientation="horizontal"
				android:paddingLeft="3sp"
				android:paddingRight="3sp" >

				<Button
					android:id="@+id/btnSearchGlass"
					android:layout_width="15sp"
					android:layout_height="15sp"
					android:layout_gravity="center_vertical"
					android:layout_marginLeft="5sp"
					android:background="@drawable/keyword_search" />

				<CustomView.CliniqueEditText
					android:id="@+id/searchText"
					style="@style/srch_txt_size"
					android:layout_width="0dip"
					android:layout_height="fill_parent"
					android:layout_marginLeft="5sp"
					android:layout_marginRight="5sp"
					android:layout_weight="1"
					android:background="@null"
					android:hint="@string/search"
					android:inputType="text|textNoSuggestions"
					android:singleLine="true" />

				<Button
					android:id="@+id/btnSearchCancel"
					android:layout_width="15sp"
					android:layout_height="15sp"
					android:layout_gravity="center_vertical"
					android:layout_marginRight="5sp"
					android:background="@drawable/search_close" />
			</LinearLayout>

			<Button
				android:id="@+id/searchBack"
				android:layout_width="30sp"
				android:layout_height="30sp"
				android:layout_centerVertical="true"
				android:layout_marginRight="5sp"
				android:layout_toLeftOf="@+id/searchForward"
				android:background="@drawable/srch_back_bg"
				android:contentDescription="@string/search_backwards" />

			<Button
				android:id="@+id/searchForward"
				android:layout_width="30sp"
				android:layout_height="30sp"
				android:layout_alignParentRight="true"
				android:layout_centerVertical="true"
				android:background="@drawable/srch_fwd_bg"
				android:contentDescription="@string/search_forwards" />
		</RelativeLayout>
	</ViewSwitcher>

	<RelativeLayout
		android:id="@+id/lowerButtons"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true" >

		<SeekBar
			android:id="@+id/pageSlider"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_centerHorizontal="true"
			android:layout_margin="0dp"
			android:background="@drawable/slider"
			android:visibility="gone" />

		<TextView
			android:id="@+id/pageNumber"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_above="@+id/pageSlider"
			android:layout_centerHorizontal="true"
			android:layout_marginBottom="10dp"
			android:background="@drawable/top_bar"
			android:gravity="center"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="@android:color/black" />
	</RelativeLayout>

</RelativeLayout>